samples/_failures_safe/1761496798_81d1ab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_53908297.c: In function ‘main’:
./samples/SAFE/__tmp_53908297.c:142:5: error: expected expression at end of input
  142 |     int found =
      |     ^~~
./samples/SAFE/__tmp_53908297.c:142:5: error: expected declaration or statement at end of input
